# c_log

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  c_log.h
scripts/: build_all.sh  clone_dependencies.sh  run_tests.sh
tests/: CMakeLists.txt  test_c_log.c  test_main.c
